@@ -1,3 +1,12 @@
+Wed May  1 21:40:55 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* fdfsolver.c (gsl_multiroot_fdfsolver_dx): new function to return
+ 	dx
+	(gsl_multiroot_fdfsolver_f): new function to return f
+
+	* fsolver.c (gsl_multiroot_fsolver_dx): new function to return dx
+	(gsl_multiroot_fsolver_f): new function to return f
+
 Sat Jan 26 17:11:34 2002  Brian Gough  <bjg@network-theory.co.uk>
 
 	* hybrid.c (set): fix broken 'if' statement
